--- a/2021_22/GEO/notes/notes.tex
+++ b/2021_22/GEO/notes/notes.tex
@@ -132,7 +132,15 @@
             \frac{\p f^m}{\p x^1} & \cdots & \frac{\p f^m}{\p x^n}&\frac{\p f^m}{\p y^1} & \cdots &\frac{\p f^m}{\p y^m}
         \end{bmatrix}.
     \end{align*}
-    If, at some point fixed $p\in D$, we have that the matrix $J_F(p)$ is invertible,
+    If, at some point fixed $p\in D$, we have that the matrix 
+    \begin{align*}
+        \begin{bmatrix}
+             \frac{\p f^1}{\p y^1} & \cdots & \frac{\p f^1}{\p y^m} \\
+             \vdots & \ddots & \vdots \\
+             \frac{\p f^m}{\p y^1} & \cdots & \frac{\p f^m}{\p y^m}
+        \end{bmatrix}
+    \end{align*}
+    is invertible,
     then there exists a smooth function
     \begin{align*}
         \Phi : E \subset \R^n \to \R^m
@@ -755,7 +763,7 @@
 \end{definition}
 
 \begin{definition}
-    At a regular point on a local surface, the plan spanned by $\vec x_{u^1}(p)$ 
+    At a regular point on a local surface, the plane spanned by $\vec x_{u^1}(p)$ 
     and $\vec x_{u^2}(p)$ is the \emph{tangent plane to the surface at $\vec x(p)$},
     which we denote by $T_{\vec x(p)}S$. At a regular point, the \emph{unit normal}
     to the surface is 
