--- a/2021_22/HANA/homework-07/homework.tex
+++ b/2021_22/HANA/homework-07/homework.tex
@@ -33,4 +33,65 @@
    \end{align*}
 \end{proof}
 
+\section*{Workshop 7 - Question 5}
+
+Let $f:[a,b]\to\R$ be continuous and let $M=\sup_{x\in[a,b]}\abs{f(x)}$. Suppose 
+$M>0$. Let $p>0$.
+
+\begin{claim*}
+   For every $\e$ such that $0<\e<M/2$ there is a non-empty open interval $I\subseteq[a,b]$
+   such that 
+   \begin{align}
+      \label{fullineq}
+      (M-\e)^p\lambda(I)\leq \int_a^b \abs{f(x)}^p dx \leq M^p(b-a).
+   \end{align}
+\end{claim*}
+\begin{proof}
+   Observe that the absolute value function is continuous. Therefore $\abs{f(x)}$
+   is a composition of continuous functions and thereby continuous itself.
+   By the \emph{Extreme Value Theorem}, there exists $x_0\in[a,b]$ such that 
+   \begin{align*}
+      \abs{f(x_0)} = M.
+   \end{align*}
+   Further, by continuity of $\abs{f}$, there exists $\delta>0$ such that for all 
+   $x\in I=(x_0-\delta, x_0+\delta)\cap[a,b]$,
+   \begin{align*}
+      M-\e < \abs{f(x)}.
+   \end{align*}
+   Note that $\epsilon > M/2 > 0$ and $p>0$. Therefore 
+   \begin{align*}
+      (M-\e)^p < \abs{f(x)}^p.
+   \end{align*}
+   By \emph{Notes, Theorem 4.2} we find 
+   \begin{align*}
+      \int_I (M-\e)^p \leq \int_I \abs{f(x)}^pdx.
+   \end{align*}
+   Since $(M-\e)^p$ is constant and $\abs{f(x)}^p$ is non-negative, we can use 
+   \emph{Notes, Theorem 4.8} and $I\subset [a,b]$ to write
+   \begin{align}
+      \label{leftineq}
+      (M-\e)^p \lambda(I)=
+      \int_I (M-\e)^p \leq \int_I \abs{f(x)}^pdx
+      \leq \int_a^b \abs{f(x)}^p dx.
+   \end{align}
+   Further, we have
+   \begin{align*}
+      \abs{f(x)}^p \leq M^p
+   \end{align*}
+   and thus 
+   \begin{align}
+      \label{rightineq}
+      \int_a^b \abs{f(x)}^p \leq \int_a^b M^p = M^p(b-a).
+   \end{align}
+   Combining (\ref{leftineq}) and (\ref{rightineq}), the claim follows.
+\end{proof}
+
+\begin{claim*}
+   \begin{align*}
+      \lim_{p\to\infty} \left(\int_a^b \abs{f(x)}^p dx\right)^{1/p} = M.
+   \end{align*}
+\end{claim*}
+\begin{proof}
+\end{proof}
+
 \end{document}
