GEO: HW3 Q3 minor fixes

--- a/2021_22/GEO/homework-03/homework.tex
+++ b/2021_22/GEO/homework-03/homework.tex
@@ -36,7 +36,7 @@
          \frac{\p g}{\p u} & \frac{\p g}{\p v}
       \end{bmatrix}.
    \end{align*}
-   Note that the $1\times1$ matrix $\left[\eval{\frac{\p g}{\p v}}{p}\right]$ is invertible 
+   Note that the $1\times1$ matrix $\left[\eval{\frac{\p g}{\p v}}{q}\right]$ is invertible 
    at $q\in D$ where $\vec y(q) = \vec p$ if and only if 
    \begin{align}
       \label{non_tangent}
@@ -62,7 +62,7 @@
    \end{align*}
    and such that for all $\tilde q \in \tilde D$ we have 
    \begin{align*}
-      g(\tilde q) = g(q) \hs\Leftrightarrow\hs \tilde p = (r, \Phi(r)) \hs \text{for some $r\in\E$}.
+      g(\tilde q) = g(q) \hs\Leftrightarrow\hs \tilde q = (r, \Phi(r)) \hs \text{for some $r\in E$}.
    \end{align*}
    Since $E$ is open and nonempty, there exists more than one such $r$. This implies that there 
    is more than one point on $\Sigma$ where the distance to $P$ is zero which contradicts the premise.
